# windows-bluetooth-watcher

./: BREAKING.md  Cargo.toml  pyproject.toml  readme.md  readme_cn.md
doc/en/PythonAPI/: Explanation.md
doc/zh-hans/PythonAPI/: Explanation.md
src/: lib.rs
src/modules/: mod.rs
src/modules/error/: mod.rs
src/modules/implements/: device.rs  diff.rs  diff_tool.rs  listener.rs  mod.rs
src/modules/implements/events/features/: callback_token.rs  mod.rs  polling_eventify.rs
src/modules/types/: device.rs  diff.rs  diff_tool.rs  listener.rs  mod.rs  serialize_format.rs
src/modules/types/events/features/: callback_token.rs  events_type.rs  mod.rs  polling_eventify.rs  polling_status.rs
windows_bluetooth_watcher/: __init__.py
