[package]
name = "windows_bluetooth_watcher"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/starwindv/windows-bluetooth-watcher.git"

[dependencies]
pyo3 = { version = "0.28.2", features = ["experimental-async"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.50.0", features = [
    "time",
    "rt-multi-thread",
    "macros"] }
windows = { version = "0.62.2", features = [
    "Devices_Bluetooth",
    "Devices_Enumeration"] }
