[package]
name = "windows_bluetooth_watcher"
version = "0.1.0"
edition = "2024"
license = "GPL-3"
homepage = "https://github.com/starwindv/windows-notice-lite.git"
description = "This project is a secondary development based on the windows crate. It primarily wraps related methods for obtaining the connection status of Bluetooth devices on the Windows system and uses PyO3 for Python bindings to provide it as a Python library."

[dependencies]
pyo3 = { version = "0.28.2", features = ["experimental-async"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.50.0", features = [
    "time",
    "rt-multi-thread",
    "macros"] }
windows = { version = "0.62.2", features = [
    "Devices_Bluetooth",
    "Devices_Enumeration"] }
